# naviernet

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/naviernet_api/: __init__.py  __main__.py  main.py  models.py  settings.py
apps/api/src/naviernet_api/routes/: datasets.py  model.py  projects.py  runs.py  sweeps.py
apps/api/src/naviernet_api/services/: __init__.py  config_service.py  datasets.py  jobs.py  physics.py  projects.py  qc.py  reconstruction.py  run_manager.py  runs.py  sweep_manager.py
apps/api/tests/: conftest.py  helpers.py  test_artifacts_api.py  test_datasets_api.py  test_deploy.py  test_model_api.py  test_projects_api.py  test_reconstruction_api.py  test_runs_api.py  test_solver_api.py  test_sweeps_api.py
apps/web/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  theme.ts  tokens.css
apps/web/src/app/: AppShell.tsx  appshell.css
apps/web/src/components/: ArtifactImage.tsx  Button.tsx  Callout.tsx  Chip.tsx  CommandPalette.tsx  Console.tsx  DL.tsx  EquationBlock.tsx  Field.tsx  Meter.tsx  Panel.tsx  ReconstructionViewport.tsx  ScrollBar.tsx  Stat.tsx  StatusDot.tsx  Switch.tsx  Table.tsx  Toast.tsx  ViewCanvas.tsx  components.css  index.ts
apps/web/src/components/charts/: CompareChart.tsx  IouChart.tsx  LossChart.tsx  TopologyChart.tsx  crosshair.ts
apps/web/src/lib/: api.ts  errors.ts  runStream.ts  runs.ts
apps/web/src/views/: DatasetsView.tsx  PhysicsModelView.tsx  Placeholder.tsx  ProjectsView.tsx  ResultsView.tsx  RunsOverview.tsx  SolverView.tsx  runs.css
apps/web/src/views/datasets/: ConditionsPanel.tsx  EmptyProjectUpload.tsx  FrameLightbox.tsx  GroupsPanel.tsx  ImageSequence.tsx  NewSeriesModal.tsx  QcPanel.tsx  SeriesLibrary.tsx  UploadPreprocess.tsx  datasets.css  useDatasetData.ts
apps/web/src/views/physics/: ArchitecturePanel.tsx  GoverningEquations.tsx  ModelTopology.tsx  physics.css  useModel.ts
apps/web/src/views/results/: AgreementPerFrame.tsx  ComparePanel.tsx  Deliverables.tsx  GrowthKinematics.tsx  PhysicsValidation.tsx  ReconstructionPanel.tsx  results.css  useComparison.ts  useResultsData.ts
apps/web/src/views/solver/: ConfigPanels.tsx  MonitorPanel.tsx  SweepPanel.tsx  form.ts  (+3 more)
apps/web/tests/: compare.test.tsx  components.test.tsx  datasets.test.tsx  physics.test.tsx  projects.test.tsx  results.test.tsx  runsOverview.test.tsx  setup.ts  solver.test.tsx  viewport.test.tsx
apps/web/tests/e2e/: failures.spec.ts  skeleton.spec.ts  solver.spec.ts
configs/: config.yaml
configs/experiment/: highest_t.yaml
configs/fluid/: fc72.yaml
configs/imaging/: default.yaml
configs/model/: stage_a.yaml
configs/scales/: default.yaml
configs/training/: stage_a.yaml
data/raw/: README.md
scripts/: help.sh  install.sh  run-linters.sh  run-tests.sh  run.sh
scripts/lib/: checks.sh  ui.sh
src/naviernet/: __init__.py  cli.py  evaluation.py  pipeline.py  training.py
src/naviernet/config/: __init__.py  schema.py
src/naviernet/data/: __init__.py  dataset.py  preprocess.py
src/naviernet/models/: __init__.py  layers.py  pinn.py
src/naviernet/physics/: __init__.py  groups.py  residuals.py
src/naviernet/utils/: __init__.py  logging.py  paths.py
src/naviernet/viz/: __init__.py  figures.py  qc.py  video.py
tests/: conftest.py  test_config.py  test_models.py  test_physics.py  test_pipeline.py
