[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naviernet"
version = "0.1.0"
description = "Physics-informed neural networks for multiphase flow in microchannels"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Pouyan Jahangiri" }]
keywords = [
    "physics-informed-neural-networks",
    "multiphase-flow",
    "microchannel",
    "boiling",
    "volume-of-fluid",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "opencv-python-headless>=4.8",
    "pillow>=10.0",
    "matplotlib>=3.7",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4"]

[project.scripts]
naviernet = "naviernet.cli:main"

[project.urls]
Repository = "https://github.com/pouyanjahangiri/naviernet"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "slow: exercises real training or rendering (deselect with '-m \"not slow\"')",
    "needs_data: requires the raw dataset or preprocessed tensors to be present",
]

[tool.ruff]
line-length = 96
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplifications
]
ignore = [
    "E501", # line length is handled by the formatter
    "B008", # function calls in argument defaults (hydra/dataclass idiom)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are the point

[tool.coverage.run]
source = ["src/naviernet"]
