[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naviernet-api"
version = "0.1.0"
description = "HTTP API for the naviernet platform — a thin layer over the solver pipeline"
requires-python = ">=3.10"
dependencies = [
    "naviernet",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27"]

[project.scripts]
naviernet-api = "naviernet_api.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
